--- a/index.hmtl/arthropleura.html
+++ b/index.hmtl/arthropleura.html
@@ -10,7 +10,7 @@
         body{
         max-height: 100%;
             padding: 0;
-            background: url(/imags/fondo\ de\ pantalla2.jpg);
+            background: url(imags/fondodepantalla2.jpg);
             background-size: cover;
             background-position: right;
             border: ridge 4px rgb(255, 230, 6);}
