--- a/index.hmtl/mammuthus.html
+++ b/index.hmtl/mammuthus.html
@@ -10,7 +10,7 @@
     body{
     max-height: 130%;
         padding: 0;
-        background: url(/imags/mamut.jpg);
+        background: url(imags/mamut.jpg);
         background-size: cover;
         background-position: center;
         border: ridge 4px rgb(255, 230, 6);}
