--- a/index.hmtl/smilodon.html
+++ b/index.hmtl/smilodon.html
@@ -8,7 +8,7 @@
    <style> body{
         margin: 0;
         padding: 0;
-        background: url(/imags/smilodon-fatalis.jpeg);
+        background: url(imags/smilodon-fatalis.jpeg);
         background-size: cover;
         background-position: top;
         font-family: sans-serif;
