--- a/index.hmtl/spinosaurus.html
+++ b/index.hmtl/spinosaurus.html
@@ -10,7 +10,7 @@
         max-height: 190%;
             padding: 0;
             
-            background: url(/imags/spino2.jpg);
+            background: url(imags/spino2.jpg);
             background-size: cover;
             background-position:left;
             border: ridge 4px rgb(255, 230, 6);}
