--- a/index.hmtl/triceratops.html
+++ b/index.hmtl/triceratops.html
@@ -10,7 +10,7 @@
         body{
         max-height: 100%;
             padding: 0;
-            background: url(/imags/Triceratops.jpg);
+            background: url(imags/Triceratops.jpg);
             background-size: cover;
             background-position: left;
             border: ridge 5px rgb(255, 230, 6);
